# dating_bot

./: .env  .env.example  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  prometheus.yml
accounts_service/: Dockerfile  pyproject.toml  setup.cfg  yoyo.ini
accounts_service/config/: .env.example
accounts_service/migrations/: 20250406_01_5HiwX-initial.sql
accounts_service/src/: __main__.py  exceptions.py
accounts_service/src/api/grpc/connections/: __init__.py  accounts.py  base.py
accounts_service/src/api/grpc/protobufs/: __init__.py
accounts_service/src/api/grpc/protobufs/accounts/: accounts_pb2.py  accounts_pb2.pyi  accounts_pb2_grpc.py
accounts_service/src/api/grpc/services/: __init__.py  accounts.py
accounts_service/src/repositories/: __init__.py  account.py  accounts.py  base.py
accounts_service/src/schemas/: __init__.py  account.py
accounts_service/src/specifications/: __init__.py  base.py  equals.py  greater.py  less.py
accounts_service/src/storage/: __init__.py  postgres.py
bot_service/: Dockerfile  pyproject.toml  setup.cfg
bot_service/config/: .env  .env.example  __init__.py  logger.py  settings.py
bot_service/locales/: messages.pot
bot_service/locales/en/LC_MESSAGES/: dating_bot.mo  dating_bot.po
bot_service/locales/ru/LC_MESSAGES/: dating_bot.mo  dating_bot.po
bot_service/src/: __main__.py  bot.py  exceptions.py
bot_service/src/api/: __init__.py
bot_service/src/api/grpc/: __init__.py
bot_service/src/api/grpc/connections/: __init__.py  accounts.py  base.py  clickhoues.py  profiles.py  recommendations.py
bot_service/src/api/grpc/protobufs/: __init__.py
bot_service/src/api/grpc/protobufs/accounts/: accounts_pb2.py  accounts_pb2_grpc.py
bot_service/src/api/grpc/protobufs/profiles/: profiles_pb2.py  profiles_pb2_grpc.py
bot_service/src/api/grpc/protobufs/recommendations/: recommendations_pb2.py
bot_service/src/handlers/: __init__.py  menu.py  router.py  search.py  start.py
bot_service/src/handlers/profile/: __init__.py  router.py
bot_service/src/handlers/profile/create/: __init__.py  age.py  check.py  city.py  create.py  description.py  name.py  photo.py  sex.py  sex_preferences.py
bot_service/src/handlers/profile/create_and_full_update/: __init__.py  age.py  city.py  create_or_update.py  description.py  gender.py  interested_in.py  name.py  photo.py  router.py  sex_preferences.py
bot_service/src/handlers/profile/update/: __init__.py  description.py  photo.py
bot_service/src/middlewares/: __init__.py  album.py
bot_service/src/states/: __init__.py  main.py  profile_creation.py  profile_update.py
bot_service/src/storage/: __init__.py  rabbit.py  redis.py
bot_service/src/templates/: __init__.py  env.py  menu.jinja2  start.jinja2
bot_service/src/templates/profile/: profile.jinja2
bot_service/src/templates/profile/create/: 1_name.jinja2  2_age.jinja2  3_gender.jinja2  3_sex.jinja2  4_photo.jinja2  5_city.jinja2  6_interested_in.jinja2  7_description.jinja2
bot_service/src/utils/: __init__.py  profile_builder.py
clickhouse/: Dockerfile  main.py  requirements.txt
elastic/: Dockerfile  elastic_pb2.py  elastic_pb2.pyi  elastic_pb2_grpc.py  elasticsearch.yml  requirements.txt  server.py
interactions/: README.md  celery_app.py  clickhouse_pb2.py  clickhouse_pb2_grpc.py  main.py  mutual.py  requirements.txt  tasks.py
profiles_service/: Dockerfile  pyproject.toml  yoyo.ini
protofiles/: README.md  accounts.proto  clickhouse.proto  profiles.proto  recommendations.proto
recommendations_service/: Dockerfile  pyproject.toml
recommendations_service/config/: .env  __init__.py  settings.py
recommendations_service/src/: __main__.py
recommendations_service/src/api/grpc/protobufs/: __init__.py
recommendations_service/src/api/grpc/protobufs/profiles/: profiles_pb2.py  profiles_pb2.pyi
recommendations_service/src/api/grpc/protobufs/recommendations/: recommendations_pb2.py  recommendations_pb2.pyi  recommendations_pb2_grpc.py
recommendations_service/src/api/grpc/services/: __init__.py  recommendations.py
recommendations_service/src/storage/: elasticsearch.py
recommendations_service/src/utils/: __init__.py  search_cities.py  search_profiles.py
scripts/: logs.sh  rebuild.sh  remote.sh  restart.sh  start.sh  start_attached.sh  stop.sh
(+47 files in other folders)
