[project]
name = "accounts-service"
version = "0.1.0"
description = ""
authors = [
    {name = "rTiRe",email = "zientenin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.2,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "yoyo-migrations (>=9.0.0,<10.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)"
]

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
types-protobuf = "^5.29.1.20250403"
grpc-stubs = "^1.53.0.5"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
flake8 = "^7.2.0"
bandit = "^1.8.3"
wemake-python-styleguide = "^1.1.0"
isort = "^6.0.1"

[tool.isort]
line_length = 120

[tool.taskipy.tasks]
lint = "flake8 ."
format = "isort ."

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
