[project]
name = "bot-service"
version = "0.1.0"
description = ""
authors = [
    {name = "rTiRe",email = "zientenin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
    "msgpack (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
types-protobuf = "^5.29.1.20250403"
grpc-stubs = "^1.53.0.5"
msgpack-types = "^0.5.0"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
flake8 = "^6.1.0"
wemake-python-styleguide = "^0.18.0"
bandit = "^1.7.7"
isort = "^5.13.2"

[tool.isort]
line_length = 120

[tool.taskipy.tasks]
lint = "flake8 ."
format = "isort ."

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
