[project]
name = "recommendations-service"
version = "0.1.0"
description = ""
authors = [
    {name = "rTiRe",email = "zientenin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["grpcio-tools (>=1.71.0,<2.0.0)", "redis (>=5.2.1,<6.0.0)", "httpx (>=0.28.1,<0.29.0)", "pydantic-settings (>=2.9.1,<3.0.0)", "elasticsearch[async] (==9.0.0)", "fastapi (>=0.115.12,<0.116.0)", "uvicorn (>=0.34.2,<0.35.0)"]

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
